--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
